--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "logger": "0.0.1",
     "morgan": "^1.10.0",
     "uuid": "^8.3.1",
+    "valid-url": "^1.0.9",
     "winston": "^3.3.3"
   },
   "devDependencies": {
